k8s/env/production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lobby-frontend
  namespace: playhub
  labels: { app: lobby-frontend }
spec:
  replicas: 3
  selector: { matchLabels: { app: lobby-frontend } }
  template:
    metadata:
      labels: { app: lobby-frontend }
    spec:
      containers:
        - name: frontend
          image: docker.io/scruffyprodigy/playhub-frontend:production
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 5
          livenessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 10
          resources:
            requests: { cpu: "500m", memory: "512Mi" }
            limits:   { cpu: "2000m", memory: "2Gi" }
