k8s/env/staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lobby-frontend
  namespace: playhub
  labels: { app: lobby-frontend }
spec:
  replicas: 2
  selector: { matchLabels: { app: lobby-frontend } }
  template:
    metadata:
      labels: { app: lobby-frontend }
    spec:
      containers:
        - name: frontend
          image: docker.io/scruffyprodigy/playhub-frontend:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 3
          livenessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 5
          resources:
            requests: { cpu: "200m", memory: "256Mi" }
            limits:   { cpu: "1000m", memory: "1Gi" }
